--- a/app/main/views/user/account.html
+++ b/app/main/views/user/account.html
@@ -9,7 +9,12 @@
           <label class="control-label">
           Email
           </label>
-          {{ show_name }}
+          {{ email }}
+        </div>
+        <label class="control-label">
+          Fullname
+          </label>
+          {{ fullname }}
         </div>
       </div>
     </div>
