--- a/app/main/views/user/menu.html
+++ b/app/main/views/user/menu.html
@@ -4,7 +4,7 @@
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
         <span class="glyphicon glyphicon-user"></span>
-        {{ show_name }}
+        <a href="/user/account">{{ show_name }}</a>
         <span class="caret"></span>
       </a>
       <ul class="dropdown-menu" role="menu">
