--- a/app/main/views/main/about.html
+++ b/app/main/views/main/about.html
@@ -5,3 +5,12 @@
   <h1>About Podder</h1>
 
   <p>Volt is a Ruby web framework where your ruby code runs on both the server and the client. Podder combines both Volt and the podcast.</p>
+
+  <div id="shortcuts">
+    <div>
+      <h1>Keyboard shortcuts:</h1>
+      <p><em>&rarr;</em> Next track</p>
+      <p><em>&larr;</em> Previous track</p>
+      <p><em>Space</em> Play/pause</p>
+    </div>
+  </div>
