--- a/app/main/assets/css/app.css.scss
+++ b/app/main/assets/css/app.css.scss
@@ -195,7 +195,7 @@ ol {
       position: absolute;
       left: -24px;
       top: 9px;
-      color: #000;
+      color: #fff;
       font-size: 13px;
       text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.2);
     }
